Doing Landing Page

--- a/src/components/NavbarStyles.css
+++ b/src/components/NavbarStyles.css
@@ -5,11 +5,9 @@
     align-items: center;
     padding: 0 30px;
     box-shadow: 0 5px 15px 0 rgba(0, 0, 0, .25);
-    width: 95%;
-    height: 80px;
-    border-radius: 13px;
+    width: 100%;
+    height: 90px;
     position: fixed;
-    top: 20px;
     left: 50%;
     transform: translate(-50%);
     z-index: 9999;
@@ -32,8 +30,8 @@
 .nav-links{
     text-decoration: none;
     color: #222;
-    font-size: 2rem;
-    font-weight: 600;
+    font-size: 1.5rem;
+    font-weight: 400;
     padding: 0.7rem 1rem;
     white-space: nowrap;
 }
@@ -90,7 +88,6 @@ button:hover{
         padding: 80px 0 30px 0;
         margin: 0;
         transition: 0.3s ease-in-out;
-        border-radius: 13px;
     }
     .nav-menu.active {
         left: 0;
@@ -107,7 +104,8 @@ button:hover{
     }
     .nav-links:hover{
         background: #01959a;
-        transition: none;           
+        transition: none;
+                  
     }
     button{
         display: none;
@@ -117,13 +115,14 @@ button:hover{
         text-align: center;
         padding: 1.5rem;
         margin: auto;
-        border-radius: 4px;
-        width: 80%;
+        border-radius: 0px;
+        width: 100%;
         background: #01959a;
         text-decoration: none;
         color: #fff;
         font-size: 1.2rem;
         font-weight: 700;
         letter-spacing: 2px;
+        cursor: pointer;
      }
     }
