--- a/src/components/DestinationStyles.css
+++ b/src/components/DestinationStyles.css
@@ -1,15 +1,23 @@
 .destination {
     margin: 4rem 6rem;
 }
-.destination h1{
+.destination h1 {
     font-size: 3rem;
 }
-.first-des{
-   display: flex; 
+.first-des {
+   display: flex;
    align-items: center;
    justify-content: space-between;
-   margin-top: 4.5rem;    
+   margin-top: 4.5rem; 
 }
+.first-des-reverse{
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 4.5rem; 
+ }
+
 .des-text{
     width: 45%;
     text-align: start;
@@ -27,21 +35,26 @@
 }
 .image1 img{
     width: 49%;
-    height: 350px;
+    height: 450px;
     object-fit: cover;
     border-radius: 6px;
     box-shadow: -1px 1px 62px -18px rgba(0, 0, 0, 0.19);
 }
 .image1 img:nth-child(2){
     position: absolute;
-    top: -10%;
+    top: -12%;
     right: 0;
 }
-@media screen and (max-width: 850) {
+@media screen and (max-width: 850px) {
     .destination {
         margin: 4rem 2rem;
     }
     .first-des{
+        display: flex; 
+        flex-direction: column-reverse;
+        margin-top: 2.5rem; 
+    }
+    .first-des-reverse {
         display: flex; 
         flex-direction: column-reverse;
         margin-top: 2.5rem; 
@@ -54,7 +67,6 @@
         margin: 1.8rem 0;
     }
     .image1 img{
-        height: 250px;
-    }
-    
+        height: 300px;
+    }   
 }
