--- a/src/components/NavbarStyles.css
+++ b/src/components/NavbarStyles.css
@@ -3,20 +3,25 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 30px;
+    padding: 0px 30px;
     box-shadow: 0 5px 15px 0 rgba(0, 0, 0, .25);
+    border: 1px solid #DDDDDD;
     width: 100%;
-    height: 90px;
+    height: 80px;
     position: fixed;
     left: 50%;
     transform: translate(-50%);
     z-index: 9999;
+    margin-bottom: 4.5rem;
 }
 .menu-icons {
     display: none;
 }
 .navbar-logo{
-    color: #222;
+    text-transform: uppercase;
+    letter-spacing: 0.3rem;
+    margin-bottom: 0;
+    color: #000000;
     font-size: 2rem;
     cursor: pointer;
 }
@@ -30,7 +35,7 @@
 .nav-links{
     text-decoration: none;
     color: #222;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     font-weight: 400;
     padding: 0.7rem 1rem;
     white-space: nowrap;
