--- a/src/components/HeroStyles.css
+++ b/src/components/HeroStyles.css
@@ -23,6 +23,7 @@
   }
   
   .header {
+    padding-top: 10rem;
     width: 100%;
     height: 80px;
     height: 100vh;
@@ -55,19 +56,25 @@
   }
   
   .para {
-    color: #ffffffcb;
+    color: #000000cb;
   }
   
-  button {
+  .hero-btn {
+    padding-top: 1rem;
     padding: 0.9rem 1.2rem;
     border-radius: 25px;
-    background-color: var(--green);
+    background-color: rgb(4, 66, 4);
     border: 0;
     text-transform: uppercase;
     letter-spacing: 0.2rem;
     font-size: 1rem;
-    color: var(--white);
+    color: white;
     cursor: pointer;
+    transition: 0.2s ease-in-out;
+  }
+  .hero-btn:hover{
+    background-color: #000000;
+    color: white;
   }
   #rightEar,
   #leftEar,
@@ -90,4 +97,3 @@
       transform: translateY(-15px);
     }
   }
-  
