--- a/src/components/FooterStyles.css
+++ b/src/components/FooterStyles.css
@@ -42,6 +42,12 @@
     padding-bottom: 0.4rem;
     font-size: 1.1rem;
 }
+.last-bottom h2{
+    text-transform: uppercase;
+    font-weight: 300;
+    color: #000000;
+    font-size: 1rem;
+}
 @media screen and (max-width:850px){
     .footer {
         padding: 4rem 2rem;
