--- a/src/components/RecentStyles.css
+++ b/src/components/RecentStyles.css
@@ -2,6 +2,12 @@
     margin: 4rem 6rem;
     color: #2a2a2a;
 }
+.recent h1 {
+    font-size: 3rem;
+    text-transform: uppercase;
+    letter-spacing: 0.3rem;
+    font-weight: 400;
+}
 .trip h1 {
     font-size: 3rem;
 }
@@ -15,7 +21,7 @@
     width: 32%;
     text-align: start;
     box-shadow: 0 5px 25px 2px rgba(0, 0, 0, 0.11);
-    border-radius: 7px;
+    border-radius: 4px;
     cursor: pointer;
     padding: 1rem .8rem;
 }
@@ -28,7 +34,7 @@
     width: 100%;
     height: 100%;
     transition: 0.3s ease-in-out;
-    border-radius: 7px;
+    border-radius: 2px;
 }
 .r-image:hover img {
     transform: scale(1.3);
@@ -36,6 +42,27 @@
 .r-card h4 {
     font-size: 1.3rem;
     padding: .9rem 0 .2rem 0;
+    text-transform: uppercase;
+}
+.r-card p{
+    text-align: justify;
+}
+.r-card button{
+    padding-top: 1rem;
+    padding: 0.9rem 1rem;
+    border-radius: 5px;
+    background-color: rgb(4, 66, 4);
+    border: 0;
+    text-transform: uppercase;
+    letter-spacing: 0.2rem;
+    font-size: 1rem;
+    color: white;
+    cursor: pointer;
+    transition: 0.2s ease-in-out;
+}
+.r-card button:hover{
+    background-color: whitesmoke;
+    color: black;
 }
 @media screen and (max-width:850px){
     .recent {
