--- a/src/components/IdentityStyles.css
+++ b/src/components/IdentityStyles.css
@@ -1,4 +1,4 @@
-.signup-form-container {
+.identity-form-container {
     position: relative;
     top: 100px;
     bottom: 0px;
@@ -6,7 +6,7 @@
     width: 400px;
     margin-bottom: 120px;
   }
-.signup-form {
+.identity-form {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -19,15 +19,13 @@
     box-shadow: 0px 0px 10px #ccc;
   }
   
-  .signup-form h2 {
+  .identity-form h2 {
     font-size: 28px;
     margin-bottom: 20px;
     color: #333;
-    text-transform: uppercase;
-    font-weight: 400;
   }
   
-  .signup-form label {
+  .identity-form label {
     clear: left;
     display: block;
     font-size: 16px;
@@ -35,7 +33,7 @@
     color: #333;
   }
   
-  .signup-form input {
+  .identity-form input {
     width: 100%;
     padding: 10px;
     margin-bottom: 20px;
@@ -44,7 +42,7 @@
     font-size: 16px;
   }
   
-  .signup-form button {
+  .identity-form .formButton {
     width: 100%;
     padding: 10px;
     background-color: #333;
@@ -56,6 +54,6 @@
     margin-bottom: 10px;
   }
   
-  .signup-form button:hover {
+  .identity-form  .formButton:hover {
     background-color: #555;
   }
