--- a/src/components/IdentityStyles.css
+++ b/src/components/IdentityStyles.css
@@ -1,9 +1,9 @@
 .identity-form-container {
     position: relative;
-    top: 100px;
+    top: 80px;
     bottom: 0px;
     margin: 0 auto;
-    width: 400px;
+    width: 450px;
     margin-bottom: 120px;
   }
 .identity-form {
@@ -20,10 +20,11 @@
   }  
   .identity-form h2 {
     font-size: 28px;
-    margin-bottom: 20px;
-    color: #333;
+    color: #000000;
   }
-  
+  .identity-form p{
+    margin-bottom: 20px;
+  }
   .identity-form label {
     clear: left;
     display: block;
@@ -36,12 +37,13 @@
     width: 100%;
     padding: 10px;
     margin-bottom: 20px;
-    border: 1px solid #ccc;
+    border: 0px;
+    border-bottom: 1px solid #ccc;
     border-radius: 3px;
     font-size: 16px;
   }
   
-  .identity-form .formButton {
+.identity-form .formButton {
     width: 100%;
     padding: 10px;
     background-color: #034d0f;
@@ -51,8 +53,17 @@
     font-size: 16px;
     cursor: pointer;
     margin-bottom: 10px;
+    text-decoration: none;
   }
   
   .identity-form  .formButton:hover {
     background-color: #116406;
+  }
+  .crt-link {
+    text-decoration: none;
+    color: #034d0f;
+    font-weight: bold;
+  }
+  .crt-link:hover {
+    color: #116406;
   }
