--- a/src/components/HeaderStyle.css
+++ b/src/components/HeaderStyle.css
@@ -15,3 +15,38 @@ h1 {
     padding-top: 4px;
     padding-bottom: -8px;
 }
+.web-logo {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 70px;
+    background-color: #f2f2f2;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 0 20px;
+    border-bottom: 1px solid #CCCCCC;   
+}
+.fixed-header {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 50%;
+  height: 70px;
+  background-color: #f2f2f2;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 0 20px;
+  border-bottom: 1px solid #CCCCCC;
+}
+.notification-icon {
+  margin-right: 20px;
+  font-size: 20px;
+}
+.user-photo img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
