--- a/src/components/CardStyles.css
+++ b/src/components/CardStyles.css
@@ -1,4 +1,9 @@
-.welcome-card-container {
+.container {
+  width: 100%;
+  align-items: flex-end;
+  margin: 0 auto;
+}
+.welcome-card {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -8,22 +13,14 @@
     width: 800px;
     border-radius: 10px;
     margin-top: -600px;
-    margin-bottom: 120px;
+    margin-bottom: 20px;
     border: 1px solid #a19e9e;
   }
   .search-input {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    position: relative;
     margin: 0 auto;
-    padding: 30px;
-    top: 20px;
     width: 800px;
-    border-radius: 10px;
-    margin-top: -600px;
     margin-bottom: 120px;
-    border: 1px solid #a19e9e;
   }
   .search-form {
     display: flex;
@@ -32,17 +29,12 @@
     justify-content: center;
     width: 100%;
     margin: 0 auto;
-    padding: 40px;
-    border: 1px solid #ccc;
     border-radius: 5px;
-    box-shadow: 0px 0px 10px #ccc;
   } 
   .search-form input {
     width: 100%;
     padding: 10px;
-    margin-bottom: 20px;
-    border: 0px;
-    border-bottom: 1px solid #ccc;
+    border: 1px solid #ccc;
     border-radius: 3px;
     font-size: 16px;
   }
