--- a/src/components/CardStyles.css
+++ b/src/components/CardStyles.css
@@ -17,7 +17,13 @@
     margin-bottom: 20px;
     border: 1px solid #a19e9e;
   }
+  .req-card {
+    margin-top: 3rem;
+    display: flex;
+    justify-content: space-between;
+}
   .search-input {
+    display: flex;
     position: relative;
     margin: 0 auto;
     width: 800px;
@@ -33,6 +39,7 @@
     border-radius: 5px;
   } 
   .search-form input {
+    display: flex;
     width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
@@ -128,14 +135,8 @@
     cursor: pointer;
   }
   .filter:hover {
-    background-color: #ffffff;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
+    cursor: pointer;
   }
   .close:hover {
-    background-color: #ffffff;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
+    cursor: pointer;
   }
